--- a/index.html
+++ b/index.html
@@ -6,11 +6,44 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="styles/uikit.min.css">
     <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="styles/fonts.css" type="text/css" charset="utf-8" />
     <script src="js/uikit.min.js"></script>
     <script src="js/main.js"></script>
     <title>Document</title>
 </head>
 <body>
+    <div class="uk-container uk-container-large">
+            <h1 class="uk-heading-line uk-margin-top uk-text-center uk-margin-large-bottom">
+                <span class="rin">
+                    <span style="font-size:1.5rem">Make</span>
+                    <br>
+                    <span style="font-size:1.9rem">your</span>
+                    <br>
+                    <span style="font-size:2rem">t-shirt</span>
+                </span>
+            </h1>
+
+            <div uk-grid class="uk-width-1-1 uk-grid-match">
+                <div class="uk-width-1-1 uk-width-1-4@m ">
+                    <div class="border uk-padding-small">
+                        <p>images/text</p>
+                    </div> 
+                </div>
+                <div class="uk-width-1-1 uk-width-1-2@m ">
+                    <div class="border uk-padding-small">
+                        <p>canvas</p>
+                    </div> 
+                </div>
+                <div class="uk-width-1-1 uk-width-1-4@m ">
+                    <div class="border uk-padding-small">
+                        <p>inputs</p>
+                    </div> 
+                </div>
+            </div>
+
+
+    </div>
+
     
 </body>
 </html>
