--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
                         </div>
                         <div class="uk-width-1-1 uk-flex uk-flex-center">
                             <div class="canvas-wrapper uk-flex uk-flex-center" style="width:490px;height:520px;">
-                                <canvas class="toggle" id="front" width="480" height="510"></canvas>
-                                <canvas class="toggle" id="back" width="480" height="510" style="display: none;"></canvas>
+                                <canvas class="toggle displayCanvas activeCanvas" id="canvasFront" width="480" height="510"></canvas>
+                                <canvas class="toggle" id="canvasBack" width="480" height="510" ></canvas>
                             </div>  
                         </div>
                         <div class="uk-width-1-1">
