before branch for client

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                                                         <input type='text' id="flat" />
                                                 </div>
                                         </div>
-                                        <button class="uk-button uk-button-default addTextButton" type="button">Добавить текст</button>
+                                        <button class="uk-button uk-button-default addTextButton" type="button" onclick="addText()">Добавить текст</button>
                                     </div>
                                 </li>
                         </ul>
