add get previews

--- a/index.html
+++ b/index.html
@@ -175,6 +175,9 @@
                                                     <label><input class="uk-radio" type="radio" name="radio2">Белым мелом</label>
                                                 </div>
                                         </div>
+                                        <div class="uk-margin">
+                                                <button type="button" onclick="getPreviews()"> Открыть превьюшки в новом окне</button>
+                                        </div>
 
                                     </fieldset>
                                 </form>
