--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
 
                                 <div class="canvas-input canvas-input--top">
                                     <span class="canvas-input_text">Высота от воротника</span>
-                                    <input class="uk-input" type="number">
+                                    <input class="uk-input" type="number" id="h-fr-the-collar_Front">
                                 </div>
                                 <div class="canvas-absolute-holder uk-position-center-left">
                                         <canvas class="toggle displayCanvas activeCanvas" id="canvasFront" width="482" height="425"></canvas> 
                                 </div>
-                                    <div class="canvas-input canvas-input--right"><span class="canvas-input_text">Высота принта</span><input class="uk-input" type="number"></div>
+                                    <div class="canvas-input canvas-input--right"><span class="canvas-input_text">Высота принта</span><input class="uk-input" type="number" id="img-h_Front"></div>
 
                                 <div class="canvas-input canvas-input--bottom">
                                     <span class="canvas-input_text">Ширина принта</span>
-                                    <input class="uk-input" type="number">
+                                    <input class="uk-input" type="number" id="img-w_Front">
                                 </div>
 
                             </div>
@@ -96,16 +96,16 @@
 
                                         <div class="canvas-input canvas-input--top">
                                             <span class="canvas-input_text">Высота от воротника</span>
-                                            <input class="uk-input" type="number">
+                                            <input class="uk-input" type="number" id="h-fr-the-collar_Back">
                                         </div>
                                         <div class="canvas-absolute-holder uk-position-center-left">
                                                 <canvas class="toggle displayCanvas" id="canvasBack" width="482" height="425"></canvas> 
                                         </div>
-                                            <div class="canvas-input canvas-input--right"><span class="canvas-input_text">Высота принта</span><input class="uk-input" type="number"></div>
+                                            <div class="canvas-input canvas-input--right"><span class="canvas-input_text">Высота принта</span><input class="uk-input" type="number" id="img-h_Back"></div>
         
                                         <div class="canvas-input canvas-input--bottom">
                                             <span class="canvas-input_text">Ширина принта</span>
-                                            <input class="uk-input" type="number">
+                                            <input class="uk-input" type="number" id="img-w_Back">
                                         </div>
         
                                     </div>
